fixed the dark mode color theme

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@
     color: azure !important;
   }
 }
+@media (prefers-color-scheme: light) {
+  body {
+    background-color: #121211 !important;
+    color: azure !important;
+  }
+}
